hphp/test/zend/good/Zend/tests/ns_004.php.expectf

Fatal error: Failure to resolve undefined class test\ns1\Exception in %s/ns_004.php on line 4
